--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "license": "CC0",
   "devDependencies": {
     "jsdom": "^3.1.2",
-    "mocha": "^2.2.1"
+    "mocha": "^2.2.1",
+    "uglify-js": "^2.4.17",
+    "watchy": "^0.6.0"
   }
 }
