--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "formdb",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "HTML form data binding with zero dependencies",
   "main": "formdb.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha && npm run lint",
+    "lint": "jshint formdb.js && echo 'looking good!'",
     "minify": "uglifyjs formdb.js > formdb.min.js",
     "watchy": "watchy -w formdb.js -- npm run minify"
   },
@@ -19,6 +20,7 @@
   "license": "CC0",
   "devDependencies": {
     "jsdom": "^3.1.2",
+    "jshint": "^2.6.3",
     "mocha": "^2.2.1",
     "uglify-js": "^2.4.17",
     "watchy": "^0.6.0"
