--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha && npm run lint",
+    "test": "npm run lint && mocha",
     "lint": "jshint formdb.js && echo 'looking good!'",
     "minify": "uglifyjs formdb.js > formdb.min.js",
     "watchy": "watchy -w formdb.js -- npm run minify"
