--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run lint && mocha",
+    "build": "cat src/formdb.js | umd -c formdb > formdb.js",
+    "test": "mocha",
     "lint": "jshint formdb.js && echo 'looking good!'",
     "minify": "uglifyjs formdb.js > formdb.min.js",
-    "watchy": "watchy -w formdb.js -- npm run minify"
+    "watch": "watchy -w src/formdb.js -- npm run build",
+    "watch-min": "watchy -w formdb.js -- npm run minify"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "jshint": "^2.6.3",
     "mocha": "^2.2.1",
     "uglify-js": "^2.4.17",
+    "umd": "^3.0.0",
     "watchy": "^0.6.0"
   }
 }
